# WCSS

./: .gitignore  BENCHMARK_RESULTS.md  CHANGELOG.md  Cargo.toml  LICENSE  NPM_PUBLISH_GUIDE.md  PUBLISHING.md  PUBLISH_INSTRUCTIONS.md  README.md  RELEASE_NOTES.md  benchmark_test.wcss  package-lock.json  package.json
benches/: compile_5k_rules.rs  small_benchmark.rs  small_test.rs
benchmark/: benchmark.js  comprehensive-benchmark.js  package-lock.json  package.json
crates/euis-cli/: Cargo.toml
crates/euis-cli/src/: main.rs
crates/euis-cli/src/commands/: build.rs  format.rs  mod.rs  tokens.rs  watch.rs
crates/euis-compiler/: Cargo.toml
crates/euis-compiler/src/: analyzer.rs  android_generator.rs  ast.rs  cache.rs  codegen.rs  content_scanner.rs  css_modules.rs  diagnostics.rs  docs_generator.rs  error.rs  formatter.rs  ios_generator.rs  lib.rs  parallel.rs  parser.rs  plugin.rs  prefixer.rs  preflight.rs  sourcemap.rs  tailwind_migration.rs  theming.rs  token_merger.rs  typescript_generator.rs  validator.rs  w3c_css_generator.rs  w3c_optimizer.rs  w3c_transform.rs
crates/euis-compiler/tests/: content_scanning.rs  css_custom_properties.rs  deduplication.rs  diagnostics_tests.rs  error_reporting_completeness.rs  error_suggestions.rs  formatting_consistency.rs  low_specificity.rs  minification.rs  modern_css_syntax.rs  multiple_error_detection.rs  parallel_processing.rs  parse_format_roundtrip.rs  parser_syntax_coverage.rs  responsive_design.rs  state_selectors.rs  tailwind_directives.rs  token_composition.rs  token_resolution.rs  tree_shaking.rs  typed_om_generation.rs  valid_css_generation.rs  validation_errors.rs  w3c_integration_tests.rs  w3c_parser_task_2_1.rs  w3c_parser_task_2_2.rs  w3c_parser_task_2_3.rs  zero_runtime.rs
crates/wcss-cli/: Cargo.toml
crates/wcss-cli/src/: main.rs
crates/wcss-cli/src/commands/: build.rs  format.rs  tokens.rs  watch.rs
crates/wcss-compiler/: Cargo.toml
crates/wcss-compiler/src/: analyzer.rs  ast.rs  cache.rs  codegen.rs  config.rs  content_scanner.rs  css_modules.rs  diagnostics.rs  docs_generator.rs  error.rs  flutter_generator.rs  formatter.rs  lib.rs  optimizer.rs  parallel.rs  parser.rs  plugin.rs  prefixer.rs  sourcemap.rs  token_merger.rs  tokens.rs  typescript_generator.rs  validator.rs  w3c_parser.rs  w3c_resolver.rs  w3c_validator.rs
crates/wcss-compiler/tests/: content_scanning.rs  css_custom_properties.rs  deduplication.rs  diagnostics_tests.rs  error_reporting_completeness.rs  error_suggestions.rs  formatting_consistency.rs  low_specificity.rs  minification.rs  modern_css_syntax.rs  multiple_error_detection.rs  parallel_processing.rs  parse_format_roundtrip.rs  parser_syntax_coverage.rs  responsive_design.rs  state_selectors.rs  tailwind_directives.rs  token_composition.rs  token_resolution.rs  tree_shaking.rs  typed_om_generation.rs  valid_css_generation.rs  validation_errors.rs  w3c_integration_tests.rs  w3c_parser_task_2_1.rs  w3c_parser_task_2_2.rs  w3c_parser_task_2_3.rs  zero_runtime.rs
crates/wcss-wasm/: Cargo.toml
crates/wcss-wasm/src/: lib.rs
examples/: design-tokens.json  tailwind-first.wcss
test-vite-project/: index.html  main.js  (+4 more)
(+14 files in other folders)
