[workspace]
members = [
    "crates/wcss-compiler",
    "crates/wcss-cli",
    "crates/wcss-wasm",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/huxeinsatoru/WCSS"

[workspace.dependencies]
wcss-compiler = { path = "crates/wcss-compiler" }
