[workspace]
members = [
    "crates/euis-compiler",
    "crates/euis-cli",
    "crates/euis-wasm",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/huxeinsatoru/euis-css"

[workspace.dependencies]
euis-compiler = { path = "crates/euis-compiler" }
