[package]
name = "euis-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Euis (Euis) core - parser, validator, optimizer, and code generator"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
regex = "1"
glob = "0.3"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[[bin]]
name = "benchmark_5k"
path = "../../benches/compile_5k_rules.rs"

[[bin]]
name = "small_test"
path = "../../benches/small_test.rs"
