[package]
name = "wcss-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WCSS (Web Compiler Style Sheets) core - parser, validator, optimizer, and code generator"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"

[[bin]]
name = "benchmark_5k"
path = "../../benches/compile_5k_rules.rs"

[[bin]]
name = "small_test"
path = "../../benches/small_test.rs"
