[package]
name = "wcss-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WCSS WebAssembly bindings for Node.js and browser environments"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wcss-compiler.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
